[package]
name = "btrfsutil-sys"
version = "0.1.0"
authors = ["cezarmathe <me@cezarmathe.com>"]
edition = "2018"
description = "Raw bindings to libbtrfsutil"
documentation = "https://docs.rs/btrfsutil-sys"
readme = "README.md"
repository = "https://github.com/cezarmathe/btrfsutil-sys"
license = "MIT"
build = "build.rs"
links = "btrfs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.53.2"
